--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,18 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #FAFAFA;
+    font-family: 'Roboto', sans-serif;
+}
+
 .barratopo {
     background-color: #EC362D;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 69px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     position: fixed;
     width: 100%;
 }
@@ -18,6 +23,100 @@
 }
 
 .paginteira {
+    padding-top: 140px;
+    width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.firstform {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 600px;
+    background-color: #FFFFFF;
+    margin: 27px 0 85px 0;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+}
+
+h1 {
+    font-weight: 700;
+    font-size: 23px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+}
+
+input {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    font-size: 19px;
+    margin: 5px;
+    width: 564px;
+    height: 46px;
+    border: 1px solid #D1D1D1;
+    border-radius: 5px;
+    padding: 0 0 0 15px;
+}
+
+::placeholder {
+    font-size: 19px;
+    font-weight: 400;
+    font-style: italic;
+    color: #BABABA;
+}
+
+button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #EC362D;
+    color: #FFF5F4;
+    border: none;
+    border-radius: 15px;
+    font-size: 21px;
+    font-weight: 400;
+    padding: 15px 40px;
+}
+
+@media only screen and (max-width: 1100px) {
+
+.paginteira {
+    padding-top: 106px;
+}
+
+h1 {
+    font-size: 20px;
+}
+
+.firstform {
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 29px;
+}
+
+input {
+    width: 100%;
+    object-fit: contain;
+}
+
+form {
+    width: 97%;
+}
+
+button {
+    font-size: 18px;
+    width:85%;
+    padding: 20px 0px;
+}
+
 }
