--- a/styles.css
+++ b/styles.css
@@ -47,12 +47,18 @@ h1 {
     font-size: 23px;
 }
 
+h2 {
+    font-weight: 700;
+    font-size: 20px;
+    margin: 27px 0 12px 7px;
+}
+
 form {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     padding: 5px;
+    position: relative;
 }
 
 input {
@@ -73,6 +79,18 @@ input {
     font-weight: 400;
     font-style: italic;
     color: #BABABA;
+}
+
+.pular {
+    height: 27px;
+}
+
+ion-icon {
+    color: black;
+    font-size: 26px;
+    position: absolute;
+    top: 27px;
+    right: 27px;
 }
 
 button {
