--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,10 @@ button {
     padding: 15px 40px;
 }
 
+button:hover {
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 1100px) {
 
 .paginteira {
