--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,15 @@ ion-icon {
     display: none;
 }
 
+p {
+    color: #EC362D;
+    margin-left: 9px;
+}
+
+.invalida {
+    background-color: #FFE9E9;
+}
+
 @media only screen and (max-width: 1100px) {
 
 .paginteira {
