--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,10 @@ p {
     margin-top: 25px;
 }
 
+.gohome:hover {
+    cursor: pointer;
+}
+
 .formatquizzsuccess {
     display: flex;
     flex-direction: column;
@@ -156,10 +160,37 @@ p {
     margin: 45px 0;
 }
 
-.formatquizzsuccess > img {
-    max-height: 266px;
-    max-width: 95%;
+.formatquizzsuccess img {
+    height: 266px;
+    max-width: 100%;
     border-radius: 5px;
+}
+
+.degrade {
+    border-radius: 5px;
+    height: 266px;
+    width: 100%;
+    position: relative;
+}
+
+.degrade::after {
+    content:'';
+    position:absolute;
+    left:0; top:0;
+    width:100%; height:100%;
+    display:inline-block;
+    background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* IE10+ */
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+    border-radius: 5px;
+}
+
+.degrade:hover {
+    cursor: pointer;
 }
 
 .titulonaimagem {
