--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,10 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
+.thirdform,
 .secondform,
 .firstform {
     display: flex;
@@ -207,8 +209,85 @@ h3 {
     position: absolute;
     left: 27px;
     bottom: 44px;
-    z-index: 1;
+    z-index: 2;
 }
+
+.openQuizz {
+    width: 100%;
+    height: 427px;
+}
+
+.escurecendo,
+.titulo img {
+    width: 100%;
+    height: 427px;
+    position: absolute;
+    top: 69px;
+    object-fit: cover;
+    z-index: -1;
+}
+
+.escurecendo {
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 0;
+}
+
+h4 {
+    color: #FFFFFF;
+    font-weight: 400;
+    font-size: 39px;
+    margin-top: 164px;
+    margin-bottom: 200px;
+
+    display: flex;
+    justify-content: center;
+}
+
+h5 {
+    color:#FFFFFF;
+    font-weight: 700;
+    font-size: 23px;
+}
+
+.perguntaCor{
+    width: 688px;
+    height: 138px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.thirdform {
+    width: max-content;
+}
+
+.thirdform form {
+    margin: 34px;
+}
+
+.answers img{
+    width: 320px;
+    height: 175px;
+}
+
+.answers {
+    width: max-content;
+    margin: 8px;
+}
+
+.respostas {
+    width: 688px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+h6 {
+    color: #000000;
+    font-weight: 700;
+    font-size: 20px;
+    margin: 5px 0;
+} 
 
 @media only screen and (max-width: 1100px) {
 
@@ -220,6 +299,7 @@ h1 {
     font-size: 20px;
 }
 
+.thirdform,
 .secondform,
 .firstform {
     width: 100%;
@@ -232,8 +312,23 @@ input {
     object-fit: contain;
 }
 
+.respostas,
+.perguntaCor,
 form {
     width: 97%;
+}
+
+.respostas{
+    justify-content: space-between;
+}
+
+.answers {
+    width: 46%;
+    height: 40%;
+}
+
+.answers img {
+    width: 100%;
 }
 
 button {
