--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body {
     position: relative;
 }
 
+.fourthform,
 .thirdform,
 .secondform,
 .firstform {
@@ -205,6 +206,7 @@ p {
     z-index: 1;
 }
 
+.userQuizzes,
 .quizlistados {
     display: flex;
     flex-direction: row;
@@ -216,6 +218,7 @@ p {
 }
 
 .gradiente,
+.userQuizzes img,
 .quizlistados img {
     width: 458px;
     height: 241px;
@@ -318,7 +321,47 @@ h6 {
     font-weight: 700;
     font-size: 20px;
     margin: 5px 0;
-} 
+}
+
+.none {
+    width: 75%;
+    height: 221px;
+    border: 3px dashed #D4D4D4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.none p {
+    color: #B9B9B9;
+    font-weight: 400;
+    font-size: 26px;
+}
+
+.none :nth-child(2){
+    margin-bottom: 24px;
+}
+
+.none button {
+    color: #EC362D;
+    background-color: #FAFAFA;
+    border: 3px dashed #EC362D;
+    border-radius: 50px;
+}
+
+.userQuizzes {
+    position: relative;
+}
+
+.userQuizzes ion-icon {
+    display: block;
+    color: #EC362D;
+    font-size: 36px;
+    position: absolute;
+    right: -60px;
+    top: 30%;
+}
 
 @media only screen and (max-width: 1100px) {
 
