--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 }
 
 .paginteira {
-    padding-top: 140px;
+    padding-top: 69px;
     padding-bottom: 30px;
     width: 100%;
     display: flex;
@@ -245,13 +245,16 @@ h3 {
 
 .openQuizz {
     width: 100%;
-    height: 427px;
+    height: 227px;
 }
 
 .escurecendo,
 .titulo img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 427px;
+    height: 227px;
     position: absolute;
     top: 69px;
     object-fit: cover;
@@ -267,11 +270,6 @@ h4 {
     color: #FFFFFF;
     font-weight: 400;
     font-size: 39px;
-    margin-top: 164px;
-    margin-bottom: 200px;
-
-    display: flex;
-    justify-content: center;
 }
 
 h5 {
