--- a/styles.css
+++ b/styles.css
@@ -348,6 +348,8 @@ h6 {
     background-color: #FAFAFA;
     border: 3px dashed #EC362D;
     border-radius: 50px;
+    font-weight: 400;
+    font-size: 36px;
 }
 
 .userQuizzes {
@@ -361,6 +363,10 @@ h6 {
     position: absolute;
     right: -60px;
     top: 30%;
+}
+
+.invisivel {
+    display: none;
 }
 
 @media only screen and (max-width: 1100px) {
@@ -429,6 +435,14 @@ button {
 h3 {
     bottom: 15%;
     left: 5%;
+}
+
+.none {
+    width: 95%;
+}
+
+.none button {
+    width: 240px;
 }
 
 }
