--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ body {
 }
 
 h1 {
+    margin-top: 30px;
     font-weight: 700;
     font-size: 23px;
 }
@@ -396,6 +397,7 @@ h6 {
 }
 
 h1 {
+    margin: 0;
     font-size: 20px;
 }
 
