--- a/styles.css
+++ b/styles.css
@@ -414,6 +414,38 @@ h6 {
     opacity: 0.3;
 }
 
+.buttons {
+    width: 43px;
+    height: 87px;
+    position: absolute;
+    right: 15px;
+    top: 30px;
+    background-color: #EC362D;
+    border-radius: 10px 0px 0px 11px;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.buttons ion-icon {
+    color: #FAFAFA;
+    position: absolute;
+    z-index: 3;
+    font-size: 30px;
+}
+
+.buttons :nth-child(1){
+    left: 8px;
+    top: 10px;
+}
+
+.buttons :nth-child(2){
+    left: 6px;
+    top: 45px;
+}
+
 @media only screen and (max-width: 1100px) {
 
 .paginteira {
