--- a/styles.css
+++ b/styles.css
@@ -48,13 +48,13 @@ body {
 }
 
 .fifthform {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: max-content;
-    background-color: #FFFFFF;
-    margin: 27px 0 45px 0;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 600px;
+        background-color: #FFFFFF;
+        margin: 27px 0 45px 0;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
 }
 
 .secondform {
