--- a/styles.css
+++ b/styles.css
@@ -188,21 +188,21 @@ p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    max-width: 95%;
+    width:30%;
     position: relative;
     margin: 45px 0;
     word-break: break-all;
 }
 
 .formatquizzsuccess img {
-    height: 266px;
-    max-width: 100%;
+    height: 200px;
+    width: 100%;
     border-radius: 10px;
 }
 
 .degrade {
     border-radius: 10px;
-    height: 266px;
+    height: 200px;
     width: 100%;
     position: relative;
 }
@@ -233,11 +233,11 @@ p {
     color: #FFFFFF;
     position: absolute;
     bottom: 20px;
-    left: 20px;
+    left: 12px;
     z-index: 1;
+    margin-right: 20px;
 }
 
-.exibindo,
 .userQuizzes,
 .quizlistados {
     display: flex;
@@ -520,6 +520,10 @@ form {
 
 .thirdform form {
     margin: 30x;
+}
+
+.thirdform img:hover {
+    cursor: pointer;
 }
 
 .respostas{
