Corrigindo problemas de versionamento e alguns bugs

--- a/styles.css
+++ b/styles.css
@@ -58,10 +58,6 @@ body {
     width: max-content;
 }
 
-.thirdform img:hover {
-    cursor: pointer;
-}
-
 .thirdform form {
     margin: 34px;
 }
@@ -304,11 +300,9 @@ h3 {
     width: 100%;
     color:#FFFFFF;
     font-size: 22px;
-    word-break: normal;
-    line-height: 25px;
+    word-break: break-all;
     font-weight: 400;
     position: absolute;
-    padding-right: 10%;
     left: 5%;
     bottom: 10%;
     z-index: 2;
@@ -496,16 +490,12 @@ h6 {
 
 @media only screen and (max-width: 1100px) {
 
-.master {
-    width: 90%;
-}
-
-.quizz2 {
-    width: 100%;
+.paginteira {
+    padding-top: 106px;
 }
 
 h1 {
-    margin: 25px 0 0 0;
+    margin: 0;
     font-size: 20px;
 }
 
@@ -530,6 +520,10 @@ form {
 
 .thirdform form {
     margin: 30x;
+}
+
+.thirdform img:hover {
+    cursor: pointer;
 }
 
 .respostas{
