--- a/styles.css
+++ b/styles.css
@@ -134,14 +134,6 @@ input {
     height: 27px;
 }
 
-ion-icon {
-    color: black;
-    font-size: 26px;
-    position: absolute;
-    top: 3px;
-    right: 19px;
-}
-
 button {
     display: flex;
     align-items: center;
@@ -163,10 +155,35 @@ button:hover {
     display: none;
 }
 
+.minimizado {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .minimizado :nth-child(1), 
 .minimizado :nth-child(2) {
     display: flex;
-    margin: 9px 0 9px 7px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.minimizado ion-icon {
+    color: black;
+    font-size: 26px;
+    align-self: flex-end;
+}
+
+.minimizado h2 {
+    margin: 0;
+    width: 90%;
+}
+
+.minimizado form {
+    width: 100%;
+    margin: 10px 5px;
 }
 
 p {
