--- a/styles.css
+++ b/styles.css
@@ -176,6 +176,10 @@ button:hover {
     align-self: flex-end;
 }
 
+.visivel ion-icon {
+    display: none;
+}
+
 .minimizado h2 {
     margin: 0;
     width: 90%;
@@ -183,7 +187,7 @@ button:hover {
 
 .minimizado form {
     width: 100%;
-    margin: 10px 5px;
+    margin: 10px 8px;
 }
 
 p {
@@ -211,21 +215,15 @@ p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width:30%;
+    width: 350px;
     position: relative;
     margin: 45px 0;
     word-break: break-all;
 }
 
-.formatquizzsuccess img {
-    height: 200px;
-    width: 100%;
-    border-radius: 10px;
-}
-
 .degrade {
     border-radius: 10px;
-    height: 200px;
+    height: 250px;
     width: 100%;
     position: relative;
 }
@@ -248,6 +246,13 @@ p {
 
 .degrade:hover {
     cursor: pointer;
+}
+
+.degrade img {
+    width: 100%;
+    border-radius: 10px;
+    height: 100%;
+    object-fit: cover;
 }
 
 .titulonaimagem {
@@ -528,6 +533,10 @@ h6 {
 
 .master {
     width: 100%;
+}
+
+.formatquizzsuccess {
+    margin-top: 20px;
 }
 
 .cabecalho {
